--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,7 +1,7 @@
 <Project>
 
     <PropertyGroup>
-        <FrameworkVersion>8.0.20</FrameworkVersion>
+        <FrameworkVersion>8.0.21</FrameworkVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,12 +15,12 @@
         <PackageReference Update="xunit" Version="2.9.3"/>
         <PackageReference Update="NUnit" Version="4.4.0"/>
         <PackageReference Update="NUnit3TestAdapter" Version="5.2.0"/>
-        <PackageReference Update="NUnit.Analyzers" Version="4.10.0"/>
+        <PackageReference Update="NUnit.Analyzers" Version="4.11.0"/>
         <PackageReference Update="HttpContextMoq" Version="1.7.0"/>
         <PackageReference Update="Moq" Version="4.20.72"/>
         <PackageReference Update="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1"/>
-        <PackageReference Update="FluentAssertions" Version="8.6.0"/>
-        <PackageReference Update="xunit.runner.visualstudio" Version="3.1.4"/>
+        <PackageReference Update="FluentAssertions" Version="8.8.0"/>
+        <PackageReference Update="xunit.runner.visualstudio" Version="3.1.5"/>
 
         <!--microsoft extensions -->
         <PackageReference Update="Microsoft.Extensions.Hosting" Version="8.0.1"/>
@@ -48,14 +48,14 @@
         <PackageReference Update="System.Threading.Channels" Version="8.0.0"/>
         <PackageReference Update="System.Runtime.Serialization.Primitives" Version="4.3.0"/>
         <PackageReference Update="System.Data.SqlClient" Version="4.9.0"/>
-        <PackageReference Update="System.Threading.Tasks.Extensions" Version="4.5.4"/>
+        <PackageReference Update="System.Threading.Tasks.Extensions" Version="4.6.3"/>
         <PackageReference Update="System.Text.Json" Version="8.0.6"/>
 
         <!--misc -->
         <PackageReference Update="Npgsql" Version="8.0.8"/>
         <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11"/>
         <PackageReference Update="Neo4jClient" Version="5.1.20"/>
-        <PackageReference Update="MassTransit*" Version="8.5.4"/>
+        <PackageReference Update="MassTransit*" Version="8.5.5"/>
         <PackageReference Update="RndUsr0.DinkToPdf" Version="1.0.9-20190207.1"/>
         <PackageReference Update="RazorLight" Version="2.3.1"/>
         <PackageReference Update="OpenTelemetry*" Version="1.9.0"/> <!-- дальше, подтягивает пакеты 9 версии, по этому до обновления на net10 поднимать нежелательно -->
@@ -65,7 +65,7 @@
         <PackageReference Update="Swashbuckle.AspNetCore.Swagger" Version="8.1.4"/>
         <PackageReference Update="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.4"/>
         <PackageReference Update="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.4"/>
-        <PackageReference Update="StackExchange.Redis" Version="2.9.17"/>
+        <PackageReference Update="StackExchange.Redis" Version="2.9.32"/>
         <PackageReference Update="StackExchange.Redis.Extensions.AspNetCore" Version="11.0.0"/>
         <PackageReference Update="StackExchange.Redis.Extensions.System.Text.Json" Version="11.0.0"/>
         <PackageReference Update="StackExchange.Redis.Extensions.Core" Version="11.0.0"/>
@@ -74,7 +74,7 @@
         <PackageReference Update="Refit.HttpClientFactory" Version="8.0.0"/>
 
         <!--microsoft asp.net core -->
-        <PackageReference Update="Microsoft.OpenApi" Version="2.3.1"/>
+        <PackageReference Update="Microsoft.OpenApi" Version="2.3.8"/>
         <PackageReference Update="Microsoft.Net.Http.Headers" Version="$(FrameworkVersion)"/>
         <PackageReference Update="Microsoft.AspNetCore.Mvc" Version="2.3.0"/>
         <PackageReference Update="Microsoft.AspNetCore.DataProtection*" Version="$(FrameworkVersion)"/>
@@ -97,14 +97,15 @@
         <PackageReference Update="Dex.Types" Version="1.0.27"/>
         <PackageReference Update="Dex.Extensions" Version="1.0.32"/>
         <PackageReference Update="Dex.Neo4J" Version="1.1.32"/>
-        <PackageReference Update="Dex.MassTransit.Rabbit" Version="8.0.6"/>
+        <PackageReference Update="Dex.MassTransit.Rabbit" Version="8.0.7"/>
 
         <!--Grpc -->
-        <PackageReference Update="Google.Protobuf" Version="3.32.1"/>
+        <PackageReference Update="Google.Protobuf" Version="3.33.0"/>
         <PackageReference Update="Grpc.Net.ClientFactory" Version="2.71.0"/>
         <PackageReference Update="Grpc.Net.Client" Version="2.71.0"/>
-        <PackageReference Update="Grpc.Tools" Version="2.72.0"/>
+        <PackageReference Update="Grpc.Tools" Version="2.76.0"/>
         <PackageReference Update="Grpc.AspNetCore.Server" Version="2.71.0"/>
+        <PackageReference Update="Grpc.Core.Api" Version="2.71.0" />
 
     </ItemGroup>
 </Project>
