--- a/src/Dex.TransientExceptionsHandler/Dex.TransientExceptionsHandler/Dex.TransientExceptionsHandler.csproj
+++ b/src/Dex.TransientExceptionsHandler/Dex.TransientExceptionsHandler/Dex.TransientExceptionsHandler.csproj
@@ -3,11 +3,29 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <PackageTags>dex; teamcity get revision</PackageTags>
+        <PackageTags>dex; transient exceptions</PackageTags>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <PackageVersion>8.0.0</PackageVersion>
     </PropertyGroup>
+
+    <!--Для NuGet-->
+    <PropertyGroup>
+        <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Authors>dex team</Authors>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
+    </ItemGroup>
+    <!--/Для NuGet-->
 
     <ItemGroup>
         <PackageReference Include="Grpc.Core.Api"/>
@@ -23,18 +41,4 @@
         </Compile>
     </ItemGroup>
 
-    <!--Для NuGet-->
-    <PropertyGroup>
-        <PackageProjectUrl>https://github.com/dex-it/dex-common</PackageProjectUrl>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Authors>dex team</Authors>
-        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        <EmbedUntrackedSources>true</EmbedUntrackedSources>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-        <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
-    </PropertyGroup>
-    <!--/Для NuGet-->
 </Project>
