--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -33,10 +33,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Build
-      run: |
-        dotnet restore
-        dotnet build -c Release --no-restore
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v4
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4
