--- a/src/Dex.Neo4J/Dex.Neo4J.csproj
+++ b/src/Dex.Neo4J/Dex.Neo4J.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
         <InformationalVersion>1.0</InformationalVersion>
-        <PackageVersion>1.1.31</PackageVersion>
+        <PackageVersion>1.1.32</PackageVersion>
         <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
         <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
@@ -31,8 +31,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Update="BaseGraphFTIndexProvider.cs">
-            <DependentUpon>IGraphFTIndexProvider.cs</DependentUpon>
+        <Compile Update="BaseGraphFtIndexProvider.cs">
+            <DependentUpon>IGraphFtIndexProvider.cs</DependentUpon>
         </Compile>
     </ItemGroup>
 
