--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,13 +1,13 @@
 <Project>
 
     <PropertyGroup>
-        <FrameworkVersion>8.0.22</FrameworkVersion>
+        <FrameworkVersion>10.0.1</FrameworkVersion>
     </PropertyGroup>
 
     <ItemGroup>
         <!--build related-->
         <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
-        <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0" PrivateAssets="All"/>
+        <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="10.0.101" PrivateAssets="All"/>
 
         <!--tests -->
         <PackageReference Update="coverlet.collector" Version="6.0.4"/>
@@ -23,59 +23,59 @@
         <PackageReference Update="xunit.runner.visualstudio" Version="3.1.5"/>
 
         <!--microsoft extensions -->
-        <PackageReference Update="Microsoft.Extensions.Hosting" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.Hosting" Version="$(FrameworkVersion)"/>
         <PackageReference Update="Microsoft.Extensions.Diagnostics.HealthChecks" Version="$(FrameworkVersion)"/>
-        <PackageReference Update="Microsoft.Extensions.Logging" Version="8.0.1"/>
-        <PackageReference Update="Microsoft.Extensions.Logging.Debug" Version="8.0.1"/>
-        <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3"/>
-        <PackageReference Update="Microsoft.Extensions.Options" Version="8.0.2"/>
-        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="8.0.1"/>
-        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2"/>
-        <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="8.0.2"/>
-        <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
-        <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="8.0.1"/>
-        <PackageReference Update="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0"/>
-        <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="8.0.1"/>
+        <PackageReference Update="Microsoft.Extensions.Logging" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Logging.Debug" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Logging.Abstractions" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Options" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration.Binder" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration.Abstractions" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Caching.Abstractions" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Caching.Memory" Version="$(FrameworkVersion)"/>
         <PackageReference Update="Microsoft.Extensions.Caching.StackExchangeRedis" Version="$(FrameworkVersion)"/>
-        <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1"/>
-        <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="8.0.1"/>
-        <PackageReference Update="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
-        <PackageReference Update="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0"/>
+        <PackageReference Update="Microsoft.Extensions.Hosting.Abstractions" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Options.ConfigurationExtensions" Version="$(FrameworkVersion)"/>
+        <PackageReference Update="Microsoft.Extensions.Options.DataAnnotations" Version="$(FrameworkVersion)"/>
 
         <!--system -->
-        <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="8.0.1"/>
+        <PackageReference Update="System.Diagnostics.DiagnosticSource" Version="$(FrameworkVersion)"/>
         <PackageReference Update="System.ComponentModel.Annotations" Version="5.0.0"/>
-        <PackageReference Update="System.Threading.Channels" Version="8.0.0"/>
+        <PackageReference Update="System.Threading.Channels" Version="$(FrameworkVersion)"/>
         <PackageReference Update="System.Runtime.Serialization.Primitives" Version="4.3.0"/>
         <PackageReference Update="System.Data.SqlClient" Version="4.9.0"/>
         <PackageReference Update="System.Threading.Tasks.Extensions" Version="4.6.3"/>
-        <PackageReference Update="System.Text.Json" Version="8.0.6"/>
+        <PackageReference Update="System.Text.Json" Version="$(FrameworkVersion)"/>
 
         <!--misc -->
-        <PackageReference Update="Npgsql" Version="8.0.8"/>
-        <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11"/>
+        <PackageReference Update="Npgsql" Version="10.0.0"/>
+        <PackageReference Update="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0"/>
         <PackageReference Update="Neo4jClient" Version="5.1.20"/>
         <PackageReference Update="MassTransit*" Version="8.5.7"/>
         <PackageReference Update="RndUsr0.DinkToPdf" Version="1.0.9-20190207.1"/>
         <PackageReference Update="RazorLight" Version="2.3.1"/>
-        <PackageReference Update="OpenTelemetry*" Version="1.9.0"/> <!-- дальше, подтягивает пакеты 9 версии, по этому до обновления на net10 поднимать нежелательно -->
+        <PackageReference Update="OpenTelemetry*" Version="1.14.0"/>
         <PackageReference Update="Octonica.ClickHouseClient" Version="3.1.3"/>
         <PackageReference Update="MediatR" Version="12.5.0"/>
-        <PackageReference Update="Swashbuckle.AspNetCore" Version="8.1.4"/>
-        <PackageReference Update="Swashbuckle.AspNetCore.Swagger" Version="8.1.4"/>
-        <PackageReference Update="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.4"/>
-        <PackageReference Update="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.4"/>
-        <PackageReference Update="StackExchange.Redis" Version="2.9.32"/>
+        <PackageReference Update="Swashbuckle.AspNetCore" Version="10.0.1"/>
+        <PackageReference Update="Swashbuckle.AspNetCore.Swagger" Version="10.0.1"/>
+        <PackageReference Update="Swashbuckle.AspNetCore.SwaggerGen" Version="10.0.1"/>
+        <PackageReference Update="Swashbuckle.AspNetCore.SwaggerUI" Version="10.0.1"/>
+        <PackageReference Update="StackExchange.Redis" Version="2.10.1"/>
         <PackageReference Update="StackExchange.Redis.Extensions.AspNetCore" Version="11.0.0"/>
         <PackageReference Update="StackExchange.Redis.Extensions.System.Text.Json" Version="11.0.0"/>
         <PackageReference Update="StackExchange.Redis.Extensions.Core" Version="11.0.0"/>
         <PackageReference Update="Nullable" Version="1.3.1"/>
-        <PackageReference Update="Refit" Version="8.0.0"/>
-        <PackageReference Update="Refit.HttpClientFactory" Version="8.0.0"/>
+        <PackageReference Update="Refit" Version="9.0.2"/>
+        <PackageReference Update="Refit.HttpClientFactory" Version="9.0.2"/>
         <PackageReference Update="JetBrains.Annotations" Version="2025.2.4"/>
 
         <!--microsoft asp.net core -->
-        <PackageReference Update="Microsoft.OpenApi" Version="2.3.8"/>
+        <PackageReference Update="Microsoft.OpenApi" Version="3.0.2"/>
         <PackageReference Update="Microsoft.Net.Http.Headers" Version="$(FrameworkVersion)"/>
         <PackageReference Update="Microsoft.AspNetCore.Mvc" Version="2.3.0"/>
         <PackageReference Update="Microsoft.AspNetCore.DataProtection*" Version="$(FrameworkVersion)"/>
